--- a/themes/liberty-classical/sass/blocks/_columns.scss
+++ b/themes/liberty-classical/sass/blocks/_columns.scss
@@ -36,7 +36,9 @@
 		}
 
 		&.is-style-image-left {
-			background: linear-gradient(90deg, rgba(255,255,255,0) 25%, rgba(19,41,75,1) 25%);
+			@media screen and (min-width: 800px) {
+				background: linear-gradient(90deg, rgba(255,255,255,0) 25%, rgba(19,41,75,1) 25%);
+			}
 
 			.wp-block-column:first-child {
 				.wp-block-image {
@@ -57,7 +59,9 @@
 		}
 
 		&.is-style-image-right {
-			background: linear-gradient(90deg, rgba(19,41,75,1) 75%, rgba(255,255,255,0) 75%);
+			@media screen and (min-width: 800px) {
+				background: linear-gradient(90deg, rgba(19,41,75,1) 75%, rgba(255,255,255,0) 75%);
+			}
 
 			.wp-block-column:last-child {
 				.wp-block-image {
