--- a/themes/liberty-classical/sass/blocks/_people-detail.scss
+++ b/themes/liberty-classical/sass/blocks/_people-detail.scss
@@ -130,7 +130,12 @@
 
 
         #{$self}__photo {
+		@media screen and (min-width: 800px) {
           width: 40%;
+		}
+		@media screen and (max-width: 799px) {
+          width: 0%;
+		  }
 
           img {
             object-fit: cover;
@@ -139,7 +144,13 @@
         }
 
         #{$self}__details {
+		@media screen and (min-width: 800px) {
           width: 60%;
+		  }
+		  
+		@media screen and (max-width: 799px) {
+          width: 100%;
+		  }
           padding: 2rem;
         }
       }
