--- a/themes/liberty-classical/sass/blocks/_people-detail.scss
+++ b/themes/liberty-classical/sass/blocks/_people-detail.scss
@@ -1,6 +1,8 @@
 .#{$ns}people-detail {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  @media screen and (min-width: 800px) {
+	grid-template-columns: 1fr 1fr 1fr;
+  }
   gap: 2rem;
 
 
